# Windeck

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  Gamepad.tsx  main.tsx  routes.tsx  styles.css
src-tauri/: 2  Cargo.toml  build.rs  encoded_image.txt  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: base64convert.rs  main.rs  runas.rs  runexec.rs
src/@types/: use-sound.d.ts
src/components/App/: App.css  App.tsx  Gamepad.tsx  Routes.tsx
src/components/Background/: Background.module.css  index.tsx
src/components/Background copy/: Background.module.css  index.tsx
src/components/Button/: Button.module.css  index.tsx
src/components/Clock/: Clock.module.css  index.tsx
src/components/Gamepad/: index.tsx
src/components/GamepadLayout/: GamepadLayout.module.css  index.tsx
src/components/Image/: index.tsx
src/components/Keyboard/: Keyboard.module.css  const.ts  index.tsx
src/components/Logo/: Logo.module.css  index.tsx
src/components/Navigation/: Navigation.module.css  index.tsx
src/components/Pill/: Pill.module.css  index.tsx
src/components/Template/: Template.module.css  index.tsx
src/context/App/: index.tsx  reducer.ts
src/context/Gamepad/: index.tsx  reducer.ts
src/context/Route/: index.tsx  reducer.ts
src/hooks/: useApp.tsx  useGamepad.tsx  useInput.tsx
src/interfaces/: GamepadLayout.ts  LibraryItem.ts  MenuItem.ts
src/layouts/ActionLayout/: ActionLayout.module.css  index.tsx
src/layouts/DefaultLayout/: DefaultLayout.module.css  index.tsx
src/layouts/InputLayout/: InputLayout.module.css  index.tsx
src/layouts/LibraryLayout/: LibraryLayout.module.css  index.tsx  menuItems.ts
src/layouts/MainLayout/: MainLayout.module.css  index.tsx
src/pages/Editor/: Editor.module.css  index.tsx
src/pages/Exit/: Exit.module.css  (+1 more)
src/shared/: const.ts  pages.ts  utils.ts
src/types/: LibraryItem.ts  RouteItem.ts
(+61 files in other folders)
