[package]
name = "windeck"
version = "0.0.0"
description = "Windeck"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "shell-execute", "dialog-ask", "dialog-confirm", "dialog-message", "process-exit", "dialog-open", "shell-open"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.20"
steamgriddb_api = "0.3.1"
flate2 = "1.0"
base64 = "0.12"
image = "0.23"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
