[package]
name = "windeck"
version = "0.0.0"
description = "Windeck"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }
windows = "0.10.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.20"
steamgriddb_api = "0.3.1"
flate2 = "1.0"
base64 = "0.12"
image = "0.23"
windows = "0.10.0"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
